# pyproject-flake8

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: black.yml  build.yml  check.yml  maintenance.py  test.yml
.github/workflows/test/: pyproject.toml  testfile.py
pflake8/: __init__.py  __main__.py
test/: test_append_config.py
test/data/: dummy.py  pyproject.toml
