[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pflake8"
dist-name = "pyproject-flake8"
author = "Christian Sachs"
author-email = "sachs.christian@gmail.com"
home-page = "https://github.com/csachs/pyproject-flake8"
description-file = "README.md"
license = "Unlicense"
requires = [
    "toml",
    "flake8"
]
classifiers = [
]

[tool.flit.scripts]
pflake8 = "pflake8.__main__:main"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
